[package]
authors = ["\"tom\" <\"tom.meyer89@gmail.com\">"]
default-run = "main"
edition = "2018"
name = "programs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.5"
embedded-hal = {version = "0.2.4"}
embedded_rust_h2al = {path = "../embedded-rust-H2AL"}
embedded_rust_hardware_init = {path = "../embedded-rust-hardware-init"}
# futures = {version = "0.3.5", default-features = false}
linked_list_allocator = {version = "0.9.0"}
log = "0.4.11"
stm32f1xx-hal = {version = "0.7.0", features = ["stm32f103", "rt", "medium"]}

[dev-dependencies]
trybuild = "1.0"

[[bin]]
bench = false
name = "main"
path = "src/main.rs"
test = false

[[bin]]
bench = false
name = "main_expanded"
path = "src/main_expanded.rs"
test = false
